<resources>
    <string name="app_name">DigiBoard</string>
    <string name="versionCode">6</string>
    <string name="version">v1.5</string>
    <string name="developers">Developed By \nAjeet Yadav\nBrij Pratap Singh</string>

    <string name="admob_app_id">ca-app-pub-9120224455161858~3433626865</string>

    <string name="ad_reward_id_1">ca-app-pub-9120224455161858/7018197396</string>

    <string name="ad_native_id_1">ca-app-pub-9120224455161858/6826625701</string>

    <string name="open_source_licenses">Click to See Open Source Licenses</string>
    <string name="active_quiz">Quiz</string>
    <string name="quiz_history">History</string>
    <string name="result">Result</string>
    <string name="notifications">Notifications</string>
    <string name="setting">Settings</string>
    <string name="about">About</string>
    <string name="user_name">Name</string>
    <string name="email">Email Id</string>
    <string name="notification_listener_service">Grant Permission</string>
    <string name="notification_listener_service_explanation">It is Required to give DND Permission (No Call or Message will Disturb you During Quiz). Enable it now?</string>
    <string name="aboutLibraries_description_showIcon">true</string>
    <string name="aboutLibraries_description_showVersion">false</string>
    <string name="heart_message">Hope you like this App    ❤</string>
    <string name="sign_out">   Sign Out    </string>
    <string name="icon_credit">Icon Credit</string>
    <string name="create_quiz">Create Quiz</string>
    <string name="candidate_lists">Candidate Lists</string>>
    <string name="select_role">Select Role</string>
    <string name="role_note">Note- Any Changes can\'t be done after Selection</string>
    <string name="candidate">Candidate</string>
    <string name="examiner">Examiner</string>
    <string name="quiz_list">Quiz List</string>
    <string name="quiz_details">Quiz Details</string>
    <string name="quiz_name">Quiz Name</string>
    <string name="description">Description</string>
    <string name="next">Next</string>
    <string name="note_quiz_details">Note : Create Any 4 digit Code to Encrypt questions. Give this code to quiz  candidate to attempt Quiz</string>
    <string name="question_list">Question List</string>
    <string name="option_1">option 1</string>
    <string name="option_2">option 2</string>
    <string name="option_3">option 3</string>
    <string name="option_4">option 4</string>
    <string name="question">Question</string>
    <string name="start_question_number">1</string>
    <string name="delete_option_button">Delete</string>
    <string name="add">Add</string>
    <string name="save">Save</string>

    <string name="enter_question">Enter Question</string>
    <string name="option_a">Option A</string>
    <string name="option_b">Option B</string>
    <string name="option_c">Option C</string>
    <string name="option_d">Option D</string>
    <string name="add_question">Add Question</string>
    <string name="answer">Answer</string>
    <string name="no_question_found">No question Found</string>
    <string name="candidate_name">Candidate Name</string>
    <string name="candidate_email_id">Candidate Email Id</string>
    <string name="new_candidate_list">New Candidate List</string>
    <string name="search_candidate">Search Candidate</string>
    <string name="no_candidate_found">No Candidate Found \n Please Add Candidates</string>
    <string name="no_candidate_list">No Candidate List Found \n Please Create List</string>
    <string name="enter_list_name">Enter list name</string>
    <string name="find_candidate">Find Candidate</string>
    <string name="enter_candidate_email_id">Enter Candidate Email id</string>
    <string name="candidate_list_name">Candidate List Name</string>
    <string name="list_name">List Name</string>
    <string name="total_candidate_lists">Total Number Of Candidate Lists : </string>

    <string name="notice">Notice</string>
    <string name="notice_image">Notice Image</string>

    <string name="quiz_description">Quiz Description</string>
    <string name="no_quiz_found">No Quiz Found</string>
    <string name="unpublished">Unpublished</string>
    <string name="published">Published</string>
    <string name="total_quiz">Total Number of Quiz : </string>
    <string name="quiz_info">Quiz Information</string>
    <string name="total_number_of_question">Number of question : </string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="quiz_date">Quiz Date</string>
    <string name="quiz_duration_in_minutes">Quiz duration in minutes</string>
    <string name="select_candidate_list">Select Candidate List</string>

    <!--    Notification Elements-->
    <string name="data_title">title</string>
    <string name="data_type">data_type</string>
    <string name="data_message">message</string>

    <!--  data type for  future use  -->
    <string name="data_type_quiz_message">data_type_quiz_message</string>
    <string name="data_type_quiz_attempt">data_type_quiz_attempt</string>
    <string name="remaining_credit">Credit left :  </string>
    <string name="get_some_credit">Get Some Credit</string>
    <string name="my_quizzes">My quizzes</string>
    <string name="active_till">Active Till :</string>
    <string name="instructions_title">Instructions</string>
    <string name="instruction_1">1. You have to swipe start quiz slider to enter in quiz mode. May be when quiz mode first time you see a Dialog Box asking something select \'Got it\' option. Otherwise you my face problem during quiz</string>
    <string name="instruction_2">2. When you enter in quiz mode your phone  will automatically set to Don\'t Disturb mode.</string>
    <string name="instruction_3">3. Your phone power button work as a force quiz submit button during quiz.</string>
    <string name="instruction_4">instruction_4</string>
    <string name="instruction_5">instruction_5</string>
    <string name="instruction_6">6. There is no negative marking.</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="all_the_best">All The Best</string>
    <string name="no_history_found">No History Found</string>
    <string name="no_result_found">No Result Found</string>
    <string name="not_submitted_properly">Not Submitted properly</string>

    <string name="created_date">Created date</string>
    <string name="date_validation_message">Note: Exam Date must be greater or equal to current date</string>
    <string name="showTimeAndDurationDialog">Note: Difference between Start and End time is must be greater then Quiz duration</string>
    <string name="no_notification_found">No Notification Found</string>
    <string name="notification_type">notification Type</string>
    <string name="title">title</string>
    <string name="message">Message</string>
    <string name="submit">Submit</string>
    <string name="quiz_mode">Quiz Mode</string>
    <string name="duration">00:00</string>
    <string name="skip">Skip</string>
    <string name="thank_you">Thank You</string>
    <string name="not_attempted">Not Attempted</string>
    <string name="candidate_email">Candidate Email</string>
    <string name="score">Score</string>
    <string name="testing_version">Testing version</string>
    <string name="refresh_credit">Refresh</string>
    <string name="examiner_name">Examiner Name</string>
    <string name="examiner_email">Examiner Email</string>
    <string name="examiner_details">Examiner Details</string>
    <string name="swipe_to_delete">Tip : Swipe to Delete</string>
    <string name="quiz_preview">Quiz Preview</string>
    <string name="select_file">Select File</string>
    <string name="from_file">From File</string>
    <string name="manually">Manually</string>
    <string name="any_txt_file">Any .txt file can be used</string>
    <string name="quiz_file_sample_title">Sample of file given below</string>
    <string name="quiz_sample_file">Purpose of this App?\nTime pass\nPlay Games\nConduct Quiz\nNone of these\n3\nRate this app in stars?\n2 star\n4 star\n5 star\n1 star\n3</string>
    <string name="get_2_credit_instantly">Get 2 Credit instantly</string>
    <string name="workAppreciateMsg">Click here to Appreciate my Work</string>
</resources>
