<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CandidateQuizBasicInstruction">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/startQuiz"
        android:layout_below="@id/toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/examinerDetailsCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:cardCornerRadius="6dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/bg_screen2"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:background="@color/bg_screen1"
                        android:text="@string/examiner_details"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/examinerName"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/examiner_name"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/examinerEmail"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/examiner_email"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="16sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/instruction_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/examinerDetailsCard"
                android:layout_margin="10dp"
                android:text="@string/instruction_1"
                android:textColor="#101010" />

            <TextView
                android:id="@+id/instruction_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/instruction_1"
                android:layout_margin="10dp"
                android:text="@string/instruction_2"
                android:textColor="#101010" />

            <TextView
                android:id="@+id/instruction_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/instruction_2"
                android:layout_margin="10dp"
                android:text="@string/instruction_3"
                android:textColor="#101010" />

            <TextView
                android:id="@+id/instruction_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/instruction_3"
                android:layout_margin="10dp"
                android:text="@string/instruction_4"
                android:textColor="#101010" />

            <TextView
                android:id="@+id/instruction_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/instruction_4"
                android:layout_margin="10dp"
                android:text="@string/instruction_5"
                android:textColor="#101010" />

            <TextView
                android:id="@+id/instruction_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/instruction_5"
                android:layout_margin="10dp"
                android:text="@string/instruction_6"
                android:textColor="#101010" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/instruction_6"
                android:layout_margin="10dp"
                android:text="@string/all_the_best"
                android:textAlignment="center"
                android:textColor="@color/about_libraries_accent"
                android:textSize="30sp" />

        </RelativeLayout>
    </ScrollView>

    <com.victor.loading.rotate.RotateLoading
        android:id="@+id/mainLoading"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerInParent="true"
        app:loading_color="@color/colorAccent"
        app:loading_width="5dp" />

    <in.shadowfax.proswipebutton.ProSwipeButton
        android:id="@+id/startQuiz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:arrow_color="@color/colorPrimaryDark"
        app:bg_color="@color/gradient_color"
        app:btn_text="@string/start_quiz"
        android:visibility="invisible"
        app:text_size="20dp" />

</RelativeLayout>