<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    app:cardCornerRadius="6dp"
    app:cardElevation="6dp">

    <LinearLayout
        android:id="@+id/quizDetailsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/quizName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quiz_name"
            android:textAlignment="center"
            android:textColor="@color/textCardColor"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/publishInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unpublished"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/createdDateTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_screen2"
            android:text="@string/created_date"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark" />
    </LinearLayout>
</androidx.cardview.widget.CardView>