<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    app:cardCornerRadius="6dp"
    app:cardElevation="6dp">

    <LinearLayout
        android:id="@+id/quizDetailsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/quizName"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:text="@string/quiz_name"
                android:textColor="@color/textCardColor"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/quizDescription"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:text="@string/quiz_description"
                android:textAlignment="textStart"
                android:textColor="@color/gradient_color"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/activeTillDateTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/active_till"
                android:textAlignment="center"
                android:textColor="#CF133E"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>